--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node index.js",
+      "dev": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^5.1.0"
+      "better-sqlite3": "^11.9.1",
+      "express": "^5.1.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.9"
+      "nodemon": "^3.1.9"
     }
 }
