chore: gave the backend a new home in vizune-backend 🏡💻

--- a/vizune-backend/package.json
+++ b/vizune-backend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vizune-management",
+    "name": "vizune-management-backend",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
