--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^11.9.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.41.0",
+    "express": "^5.1.0",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.30.6",
     "nodemon": "^3.1.9"
   }
 }
