💥 Unleashed the power of Zod — shared schemas, type safety, and backend validation glory

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "dist",
-    "module": "CommonJS",
-    "moduleResolution": "node"
+    "baseUrl": ".",
+    "paths": {
+      "@vizune/shared/*": ["../../packages/shared/*"]
+    }
   },
   "include": ["src"]
 }
