--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "express": "^5.1.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "drizzle-kit": "^0.30.6",
