--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "dependencies": {
+    "zod": "^3.24.2"
   }
 }
